--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/SoundCloud.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.javax.mail.jar=C:\\Users\\Ibrahim\\Downloads\\javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
